# alex-cli

./: .gitignore  README.md  pyproject.toml
alex/: auth.py  cli.py  config.py  doctor.py  errors.py  executor.py  openai_client.py  render.py  schema.py  service_diag.py  service_resolve.py  system.py  user_config.py  utils.py
scripts/: alex-shell-hook.sh  install.sh
